# rdm-lang-tools

./: .copyright.tmpl  .gitignore  README.md  implementation.md  pyproject.toml
reports/: duplicates_ar.md  duplicates_bg.md  duplicates_ca.md  duplicates_cs.md  duplicates_de.md  duplicates_el.md  duplicates_es.md  duplicates_et.md  duplicates_fa.md  duplicates_fr.md  duplicates_hr.md  duplicates_hu.md  duplicates_it.md  duplicates_ja.md  duplicates_ka.md  duplicates_ko.md  duplicates_lt.md  duplicates_no.md  duplicates_pl.md  duplicates_pt.md  duplicates_ro.md  duplicates_ru.md  duplicates_sk.md  duplicates_sv.md  duplicates_tr.md  duplicates_uk.md  duplicates_zh_CN.md  duplicates_zh_TW.md
reports/inconsistent_translations/: ar.md  ca.md  cs.md  de.md  es.md  et.md  fr.md  hu.md  it.md  ko.md  ro.md  ru.md  sk.md  sv.md  tr.md  uk.md  zh_CN.md
reports/multiple_keys/: ar.md  bg.md  ca.md  cs.md  de.md  el.md  es.md  et.md  fa.md  fr.md  hr.md  hu.md  it.md  ja.md  ka.md  ko.md  lt.md  no.md  pl.md  pt.md  ro.md  ru.md  sk.md  sv.md  tr.md  uk.md  zh_CN.md  zh_TW.md
src/: tests.py
src/rdm_lang_tools/: redirected_subprocess.py  repository.py
src/rdm_lang_tools/cli/: __init__.py  check_duplicates.py  check_via_chatgpt.py  download_translations.py  patch_repository.py  split_and_upload_translations.py
src/rdm_lang_tools/templates/: duplicates_report.md.jinja2  inconsistent_translations_report.md.jinja2  multiple_keys_report.md.jinja2
